[Fix] Header Not Showing on IPhone

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,8 @@
     box-sizing: border-box;
 }
 body {
+    width: 100dvw;
+    overflow-x: hidden;
     font-family: 'Indie Flower', cursive;
     font-family: 'Kanit', sans-serif;
 }
@@ -135,14 +137,17 @@ p, h1, h2, h3, h4 {
     width: 100dvw;
     height: 100dvh;
 }
-
-.header {
+.header__ctr {
     z-index: var(--z--header);
     position: fixed;
-    transform: translateY(-100%);
     top: 0;
+    right: 0;
     left: 0;
-    width: 100dvw;
+    width: 100%;
+}
+.header {
+    transform: translateY(-100%);
+    width: 100%;
     height: var(--h--header);
     padding: var(--p--base);
     display: flex;
